Fixed padding for noter pyramid on mobile

--- a/style.css
+++ b/style.css
@@ -640,7 +640,7 @@ footer {
 .pyramid-container {
     position: relative;
     max-width: 800px;
-    margin: 50px auto 30px auto;
+    margin: 30px auto 30px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -801,7 +801,7 @@ footer {
 /* MEDIA QUERIES ZA RESPONSIVNOST */
 @media (max-width: 600px) {
     .pyramid-container {
-        padding: 20px 10px 60px 10px;
+        padding: 20px 10px 20px 10px;
         background-size: 100% auto;
     }
     
